0x0B-malloc_free/101-strtow.c:
trtow.c:21:19: error: suggest braces around empty body in an ‘if’ statement [-Werror=empty-body]
   21 |        (flag == 0);
      |                   ^
